<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mb2"
    android:id="@+id/SignupActivity"
    tools:context=".LoginSignup.SignUpActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signupHeading"
        android:text="@string/signupPageHeading"
        style="@style/HeadingStyle"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.15"
        android:textAlignment="center"
        />

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:id="@+id/signupPhone_number"
        android:hint="@string/phoneNumberHint"
        android:inputType="phone"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3"
        android:importantForAutofill="no"
        android:background="@drawable/field_textview"
        android:minHeight="@dimen/buttomMinHeight"
        android:gravity="center"
        />
    <EditText
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:id="@+id/signupUsername"
        android:hint="@string/userNameHint"
        android:inputType="textAutoComplete"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.4"
        android:background="@drawable/field_textview"
        android:minHeight="@dimen/buttomMinHeight"
        android:gravity="center"
        />
    <EditText
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:id="@+id/signupPassword"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5"
        android:importantForAutofill="no"
        android:background="@drawable/field_textview"
        android:minHeight="@dimen/buttomMinHeight"
        android:gravity="center"
        />

    <Button
        android:layout_width ="0dp"
        android:layout_height = "wrap_content"
        android:text = "@string/signupButtonName"
        android:id = "@+id/signup"
        app:backgroundTint="@null"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.6"
        android:onClick="clickedSignupButton"
        style="@style/button_style"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/SignupToLoginLink"
        android:text="@string/SignupToLoginText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.7"
        android:typeface="serif"
        android:linksClickable="true"

        />

</androidx.constraintlayout.widget.ConstraintLayout>

<!--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-->